objects/OPP_Product__c.object
<CustomObject>
    <description>SR0 - List of PM0 products composed of 4 levels (Business Unit, Product Line, Product Family, Family)</description>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <description>SR0 - Contains the Business unit which is the first level of products in the PM0 hierarchy (Business Unit, Product Line, Product Family, Family)</description>
        <label>Business Unit (BU)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IS</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PW</fullName>
                </value>
                <value>
                    <fullName>RE</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCCRelevant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to make sure Inactive Families are also showed in Case Family Lookup. 
Use in Family Filter Lookup, 
Applicable only for Family Level</description>
        <label>Is CCC Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FamilyID__c</fullName>
        <description>family id</description>
        <formula>IF(ISPICKVAL(HierarchyType__c,&apos;PM0-FAMILY&apos;),Id,
IF(AND(ISPICKVAL(HierarchyType__c,&apos;PM0-SUB-FAMILY&apos;),ISPICKVAL(HierarchyTypeoftheParent__c,&apos;PM0-FAMILY&apos;)),ParentHierarchy__r.Id,
IF(AND(ISPICKVAL(HierarchyType__c,&apos;PM0-SERIES&apos;),ISPICKVAL(ParentHierarchy__r.HierarchyTypeoftheParent__c,&apos;PM0-FAMILY&apos;)),ParentHierarchy__r.ParentHierarchy__r.Id,
IF(ISPICKVAL(HierarchyType__c,&apos;PM0GDP&apos;),
IF(ISPICKVAL( HierarchyTypeoftheParent__c , &apos;PM0-SERIES&apos;),ParentHierarchy__r.ParentHierarchy__r.ParentHierarchy__r.Id,
IF(ISPICKVAL( HierarchyTypeoftheParent__c , &apos;PM0-SUB-FAMILY&apos;),ParentHierarchy__r.ParentHierarchy__r.Id,
IF(ISPICKVAL( HierarchyTypeoftheParent__c , &apos;PM0-FAMILY&apos;),ParentHierarchy__r.Id,&apos;&apos;))),&apos;&apos;))))</formula>
        <inlineHelpText>family id</inlineHelpText>
        <label>FamilyID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <description>SR0 - Contains the Family, which is the fourth level of products in the PM0 hierarchy (Business Unit, Product Line, Product Family, Family)</description>
        <label>Family</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GDP__c</fullName>
        <label>GDP</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HierarchyType__c</fullName>
        <label>Hierarchy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PM0-BUSINESS-UNIT</fullName>
                </value>
                <value>
                    <fullName>PM0-PRODUCT-LINE</fullName>
                </value>
                <value>
                    <fullName>PM0-SUB-FAMILY</fullName>
                </value>
                <value>
                    <fullName>PM0-STRATEGIC-PRODUCT-FAMILY</fullName>
                </value>
                <value>
                    <fullName>PM0-SERIES</fullName>
                </value>
                <value>
                    <fullName>PM0-FAMILY</fullName>
                </value>
                <value>
                    <fullName>PM0GDP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HierarchyTypeoftheParent__c</fullName>
        <label>Hierarchy Type of the Parent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PM0-BUSINESS-UNIT</fullName>
                </value>
                <value>
                    <fullName>PM0-PRODUCT-LINE</fullName>
                </value>
                <value>
                    <fullName>PM0-FAMILY</fullName>
                </value>
                <value>
                    <fullName>PM0-SUB-FAMILY</fullName>
                </value>
                <value>
                    <fullName>PM0-STRATEGIC-PRODUCT-FAMILY</fullName>
                </value>
                <value>
                    <fullName>PM0-SERIES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentHierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Hierarchy</label>
        <referenceTo>OPP_Product__c</referenceTo>
        <relationshipName>ChildProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>SR0 - Contains the Product Family, which is the third level of products in the PM0 hierarchy (Business Unit, Product Line, Product Family, Family)</description>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ITB21</fullName>
                </value>
                <value>
                    <fullName>ACBO</fullName>
                </value>
                <value>
                    <fullName>ACBS</fullName>
                </value>
                <value>
                    <fullName>ACBP</fullName>
                </value>
                <value>
                    <fullName>AFCI</fullName>
                </value>
                <value>
                    <fullName>AFCI2</fullName>
                </value>
                <value>
                    <fullName>AVSE</fullName>
                </value>
                <value>
                    <fullName>BBTMP</fullName>
                </value>
                <value>
                    <fullName>BBTMW</fullName>
                </value>
                <value>
                    <fullName>BMAM</fullName>
                </value>
                <value>
                    <fullName>BMENG</fullName>
                </value>
                <value>
                    <fullName>BMESE</fullName>
                </value>
                <value>
                    <fullName>BMPER</fullName>
                </value>
                <value>
                    <fullName>BMSOL</fullName>
                </value>
                <value>
                    <fullName>BMSPA</fullName>
                </value>
                <value>
                    <fullName>BMSYS</fullName>
                </value>
                <value>
                    <fullName>BMTRA</fullName>
                </value>
                <value>
                    <fullName>CCO05</fullName>
                </value>
                <value>
                    <fullName>CCO01</fullName>
                </value>
                <value>
                    <fullName>CCO02</fullName>
                </value>
                <value>
                    <fullName>CCO03</fullName>
                </value>
                <value>
                    <fullName>CCO06</fullName>
                </value>
                <value>
                    <fullName>CEPEC</fullName>
                </value>
                <value>
                    <fullName>CEPFP</fullName>
                </value>
                <value>
                    <fullName>CEPMP</fullName>
                </value>
                <value>
                    <fullName>CEPPP</fullName>
                </value>
                <value>
                    <fullName>CMGEN</fullName>
                </value>
                <value>
                    <fullName>CORPO</fullName>
                </value>
                <value>
                    <fullName>CSTAE</fullName>
                </value>
                <value>
                    <fullName>CSTMC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <description>SR0 - Contains the Product Line, which is the second level of products in the PM0 hierarchy (Business Unit, Product Line, Product Family,Family)</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PWACB</fullName>
                </value>
                <value>
                    <fullName>BDADS</fullName>
                </value>
                <value>
                    <fullName>BDIBS</fullName>
                </value>
                <value>
                    <fullName>BDSL3</fullName>
                </value>
                <value>
                    <fullName>BDBMS</fullName>
                </value>
                <value>
                    <fullName>BDPRD</fullName>
                </value>
                <value>
                    <fullName>PWLVB</fullName>
                </value>
                <value>
                    <fullName>ISCMS</fullName>
                </value>
                <value>
                    <fullName>PWCTR</fullName>
                </value>
                <value>
                    <fullName>IDSIG</fullName>
                </value>
                <value>
                    <fullName>DIV02</fullName>
                </value>
                <value>
                    <fullName>CSCST</fullName>
                </value>
                <value>
                    <fullName>ENENS</fullName>
                </value>
                <value>
                    <fullName>ENADS</fullName>
                </value>
                <value>
                    <fullName>ENIBS</fullName>
                </value>
                <value>
                    <fullName>ENSL2</fullName>
                </value>
                <value>
                    <fullName>ENSL3</fullName>
                </value>
                <value>
                    <fullName>PWFDA</fullName>
                </value>
                <value>
                    <fullName>PWFDB</fullName>
                </value>
                <value>
                    <fullName>PWFDS</fullName>
                </value>
                <value>
                    <fullName>IDHMI</fullName>
                </value>
                <value>
                    <fullName>IDEL2</fullName>
                </value>
                <value>
                    <fullName>IDOL2</fullName>
                </value>
                <value>
                    <fullName>IDSL3</fullName>
                </value>
                <value>
                    <fullName>IDADS</fullName>
                </value>
                <value>
                    <fullName>IDIBS</fullName>
                </value>
                <value>
                    <fullName>ITADS</fullName>
                </value>
                <value>
                    <fullName>ITIBS</fullName>
                </value>
                <value>
                    <fullName>ITSL2</fullName>
                </value>
                <value>
                    <fullName>ITHBN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDHID__c</fullName>
        <externalId>true</externalId>
        <label>PMONodeID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>Series</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubFamily__c</fullName>
        <label>Sub Family</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_PM0CodeInGMR__c</fullName>
        <description>This technical fields holds the PM0 codification in GMR. This technical field is used in order to reconcile the information that is provided by GMR and the PM0 hierarchy stored in the Product__c object in SFDC. Helps to retrieve the correct SFDC Id of the Record that is selected when a GMR search is performed.</description>
        <label>Hierarchy Code in GMR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDocumentation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>isDocumentation</description>
        <label>isDocumentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isOld__c</fullName>
        <defaultValue>false</defaultValue>
        <description>isOld?</description>
        <label>isOld</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSparePart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>isSparePart</description>
        <label>isSparePart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>parentsdhid__c</fullName>
        <formula>ParentHierarchy__r.SDHID__c</formula>
        <label>parentsdhid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productionid__c</fullName>
        <label>productionid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Pyramid</label>
    <listViews>
        <fullName>All_Products1</fullName>
        <columns>HierarchyType__c</columns>
        <columns>NAME</columns>
        <columns>BusinessUnit__c</columns>
        <columns>ProductLine__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>Family__c</columns>
        <columns>SubFamily__c</columns>
        <columns>Series__c</columns>
        <columns>GDP__c</columns>
        <columns>ParentHierarchy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Products2</fullName>
        <columns>NAME</columns>
        <columns>BusinessUnit__c</columns>
        <columns>Family__c</columns>
        <columns>FamilyID__c</columns>
        <columns>GDP__c</columns>
        <columns>IsActive__c</columns>
        <columns>ParentHierarchy__c</columns>
        <columns>parentsdhid__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>ProductLine__c</columns>
        <columns>SDHID__c</columns>
        <columns>Series__c</columns>
        <columns>SubFamily__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Family__c</field>
            <operation>contains</operation>
            <value>ALTIVAR</value>
        </filters>
        <label>ALTIVAR</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ENE_AUT</fullName>
        <columns>IsActive__c</columns>
        <columns>NAME</columns>
        <columns>ParentHierarchy__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>ProductLine__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>Family__c</columns>
        <columns>SubFamily__c</columns>
        <columns>Series__c</columns>
        <columns>GDP__c</columns>
        <columns>TECH_PM0CodeInGMR__c</columns>
        <columns>SDHID__c</columns>
        <columns>isSparePart__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductLine__c</field>
            <operation>contains</operation>
            <value>INENP,INENS,SIELE</value>
        </filters>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Family__c</field>
            <operation>equals</operation>
        </filters>
        <label>ENE_AUT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ITB</fullName>
        <columns>NAME</columns>
        <columns>BusinessUnit__c</columns>
        <columns>ParentHierarchy__c</columns>
        <columns>ProductLine__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>Family__c</columns>
        <columns>GDP__c</columns>
        <columns>TECH_PM0CodeInGMR__c</columns>
        <columns>SDHID__c</columns>
        <columns>isSparePart__c</columns>
        <columns>Series__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessUnit__c</field>
            <operation>equals</operation>
            <value>INFOR TECHNO. BUSINESS</value>
        </filters>
        <label>ITB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Product_selection</fullName>
        <columns>NAME</columns>
        <columns>BusinessUnit__c</columns>
        <columns>ProductLine__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>IsActive__c</columns>
        <columns>HierarchyType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>PTCTR</value>
        </filters>
        <label>Product selection by View Edit</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Pyramids</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>